syntax = "proto3";

package berty.errcode;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option go_package = "berty.tech/go/pkg/errcode";

option (gogoproto.goproto_enum_prefix_all) = false;

enum ErrCode {
  Undefined = 0; // default value, should never be set manually

  TODO = 666; // indicates that you plan to write a custom error handler later
  ErrNotImplemented = 777;
  ErrInternal = 999; // can be used to translate an "unknown" error (without Code), i.e., in gRPC

  //
  // Generic helpers (try to use a more specific error when possible)
  //

  ErrInvalidInput = 101;
  ErrMissingInput = 102;

  //
  // Berty Protocol (starting at 1001)
  //

  ErrSigChainNoEntries = 1001;
  ErrSigChainInvalidEntryType = 1002;
  ErrSigChainAlreadyInitialized = 1003;
  ErrSigChainPermission = 1004;
  ErrSigChainOperationAlreadyDone = 1005;
  ErrHandshakeNoPayload = 1006;
  ErrHandshakeInvalidFlow = 1007;
  ErrHandshakeInvalidFlowStepNotFound = 1008;
  ErrHandshakeParams = 1009;
  ErrHandshakeNoAuthReturned = 1010;
  ErrHandshakeInvalidKeyType = 1011;
  ErrHandshakeInvalidSignature = 1012;
  ErrHandshakeSessionInvalid = 1013;
  ErrHandshakeKeyNotInSigChain = 1014;
  ErrHandshakeDecrypt = 1015;
  ErrGroupMemberLogEventOpen = 1020;
  ErrGroupMemberLogEventSignature = 1021;
  ErrGroupMemberLogWrongInviter = 1022;
  ErrGroupMemberUnknownGroupID = 1023;
  ErrGroupMemberMissingSecrets = 1024;
  ErrGroupSecretOtherDestMember = 1030;
  ErrGroupSecretEntryDoesNotExist = 1031;
  ErrGroupSecretAlreadySentToMember = 1032;

  //
  // Bridge (starting at 2001)
  //

  ErrBridgeInterrupted = 2001;
  ErrBridgeNotRunning = 2002;
}
